<resources>
    <string name="app_name">My Contact List</string>
    <string name="title_activity_contact_map">Contacts Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_contact">Contact</string>
    <string name="title_map">Map</string>
    <string name="title_setting">Setting</string>
    <string name="title_location">Location</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_address">Address</string>
    <string name="hint_contact_city">City</string>
    <string name="hint_contact_state">State</string>
    <string name="hint_contact_zipCode">ZipCode</string>
    <string name="hint_contact_home">Home Phone</string>
    <string name="hint_contact_cell">Cell Phone</string>
    <string name="hint_contact_email">E-Mail Address</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sort_contact_by">Sort Contact By</string>
    <string-array name="pref_sort_contact_by_list_titles">
        <item>Name</item>
        <item>City</item>
        <item>Birthday</item>
    </string-array>
    <string-array name="pref_sort_contact_by_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_sort_order">Sort Order</string>
    <string-array name="pref_sort_order_list_titles">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="pref_sort_order_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_background_color">Background Color</string>
    <string-array name="pref_background_color_list_titles">
        <item>White</item>
        <item>Pink</item>
        <item>Cyan</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Teal</item>
        <item>Light Green</item>
    </string-array>
    <string-array name="pref_background_color_list_values">
        <item>#FFFFFF</item>
        <item>#E91E63</item>
        <item>#00BCD4</item>
        <item>#9C27B0</item>
        <item>#FF9800</item>
        <item>#FFEB3B</item>
        <item>#009688</item>
        <item>#8BC34A</item>
    </string-array>
    <!--<string-array name="pref_background_color_list_values">-->
    <!--<item>@color/white</item>-->
    <!--<item>@color/pink</item>-->
    <!--<item>@color/cyan</item>-->
    <!--<item>@color/purple</item>-->
    <!--<item>@color/orange</item>-->
    <!--<item>@color/yellow</item>-->
    <!--<item>@color/teal</item>-->
    <!--<item>@color/lightGreen</item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>


</resources>
