<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sort_contact_by_list_titles"
        android:entryValues="@array/pref_sort_contact_by_list_values"
        android:key="sort_contact_by"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_contact_by" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sort_order_list_titles"
        android:entryValues="@array/pref_sort_order_list_values"
        android:key="sort_order"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_order" />

    <ListPreference
        android:defaultValue="#FFFFFF"
        android:entries="@array/pref_background_color_list_titles"
        android:entryValues="@array/pref_background_color_list_values"
        android:key="background_color"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_background_color" />


</PreferenceScreen>
