<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mycontactlist.example.com.my_contact_list.ContactListActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/navigation"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/contactListContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <EditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    android:imeOptions="actionNext">
                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_name">

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact_address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_address">

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact_city"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:textSize="14sp"
                    android:ems="13"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_address"
                android:layout_toRightOf="@id/input_layout_city"
                android:layout_alignBottom="@id/input_layout_city">

                <EditText
                    android:id="@+id/editState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact_state"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:textSize="14sp"
                    android:ems="4"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_address"
                android:layout_toRightOf="@id/input_layout_state"
                android:layout_alignBottom="@id/input_layout_state">

                <EditText
                    android:id="@+id/editZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contact_zipCode"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:textSize="14sp"
                    android:ems="4"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


    </ScrollView>


    <!--<TextView-->
        <!--android:id="@+id/message"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:text="@string/title_home"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation" />



</RelativeLayout>
